syntax = "proto3";

package order;

service OrderService {
  rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
}

message CreateOrderRequest {
  repeated string productIds = 1;
}

message CreateOrderResponse {
  Order order = 1;
}

message Order {
  string id = 1;
  repeated Product products = 2;
  float totalPrice = 3;
  string status = 4;
}

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  float price = 4;
}
