syntax = "proto3";

package product;

service ProductService {
  rpc CreateProduct (CreateProductRequest) returns (CreateProductResponse);
}

message CreateProductRequest {
  string name = 1;
  string description = 2;
  float price = 3;
}

message CreateProductResponse {
  Product product = 1;
}

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  float price = 4;
}
